Fix horizontal scrollbar thumb render

--- a/frontend/src/Components/Scroller/OverlayScroller.css
+++ b/frontend/src/Components/Scroller/OverlayScroller.css
@@ -2,8 +2,20 @@
   /* Placeholder */
 }
 
-.thumb {
+.thumbVertical {
   min-height: 100px;
+  border: 1px solid transparent;
+  border-radius: 5px;
+  background-color: $scrollbarBackgroundColor;
+  background-clip: padding-box;
+
+  &:hover {
+    background-color: $scrollbarHoverBackgroundColor;
+  }
+}
+
+.thumbHorizontal {
+  min-width: 100px;
   border: 1px solid transparent;
   border-radius: 5px;
   background-color: $scrollbarBackgroundColor;
